Fix button color contrast ratio

--- a/src/components/DogCard.css
+++ b/src/components/DogCard.css
@@ -65,10 +65,6 @@ h2 {
     left: 16px;
 }
 
-.dog-name-button:hover {
-    background-color: #023469;
-}
-
-.dog-name-button:focus {
+.dog-name-button:hover, .dog-name-button:focus {
     background-color: #023469;
 }
